udpated to contemplate auditoria and idempotency
